# flow-cad

./: .env.example  .gitignore  AGENTS.md  CODEX_CONTEXT.md  CODEX_SUGGESTIONS.md  Erb.3mf  GEMMA_CONTEXT.md  GEMMA_SUGGESTIONS.md  MCP.md  PART_INTERFACES.md  PRINT_MANIFEST.md  README.md  SKILLS_DEVELOPMENT.md  build_and_scp.sh  combined_cad_sources.py  combined_robot_cad_sources.py  pyproject.toml
cad/: erb_dovetail_tolerance_test.py  erb_esp32_wroom_holder.py  erb_kawai_test_joint.py  erb_lower_chassis.py  erb_lower_chassis_legacy.py  erb_top_dome.py  params.py
docs/: BLP_READINESS_WORKFLOW.md  CODEX_SUGGESTIONS.md  DB_ACTIVE_CACHE_PROPOSAL.md  FlowArchitecture.md  FlowFaceLift.md  FlowReview.md  GEMINI_SUGGESTIONS.md  GEMMA_SUGGESTIONS.md  GEOMETRY_FOUNDATION.md  JOHN_VIEWER.md  JOHN_VIEWER_WORK.md  PART_INTERFACES.md  PRINT_MANIFEST.md  QWEN_SUGGESTIONS.md  SKILLS_DEVELOPMENT.md  VISUAL_VALIDATION.md  back_plate_bump_out_fix.md  measurements.txt  regsitry_brainstorm.md
erb_cad/: __init__.py  cli.py  main.py  params.py  paths.py  step_io.py
expanded_payload_chassis/: CODEX_CONTEXT.md  README.md
freecad/: README_bottom_tray_part_design.md  erb_battery_cassette_native.py  erb_bottom_tray_native.py  erb_bottom_tray_part_design.py  generate_native_parts.sh
legacy_stage1_lower_chassis/: CODEX_CONTEXT.md  README.md
reports/: axle_insert_dimension_report.md  dovetail_tolerance_test_report.txt  esp32_wroom_holder_report.txt  kawai_test_joint_report.txt  stage1_interference_report.json  stage1_interference_report.txt  stage1_lower_chassis_report.txt  stage1_mounting_feature_report.json  stage1_mounting_feature_report.txt  stage1_upper_hook_geometry_report.json  stage1_upper_hook_geometry_report.txt  top_dome_prototype_report.txt
scripts/: batch_convert_stl.py  check_assembly_interference.py  check_mounting_features.py  check_upper_hook_geometry.py  convert_step_to_stl.py  diag_manifest.py  (+8 more)
(+245 files in other folders)
