[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "erb-cad"
version = "0.1.0"
description = "Parametric CAD and validation helpers for the Erb balance bot chassis"
requires-python = ">=3.11"
dependencies = [
    "build123d",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["erb_cad*"]
