[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-cad"
version = "0.1.0"
description = "Parametric CAD and validation helpers for the B3/flow balance bot chassis"
requires-python = ">=3.11"
dependencies = [
    "build123d",
    "rich-click",
    "sqlmodel",
    # Local BLC orchestrator (for multi-agent workflows)
    "blc @ file:///home/gnulnx/BaseLayerCouncil",
]

[project.scripts]
flow = "flow_cad.cli:flow"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flow_cad*"]
