[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-cad"
version = "0.1.0"
description = "Reusable project-local CAD workbench, viewer, exporters, and validation runtime"
requires-python = ">=3.11"
dependencies = [
    "build123d",
    "fastapi",
    "rich-click",
    "sqlmodel",
    "uvicorn",
]

[project.scripts]
flow = "flow_cad.cli:flow"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.setuptools.packages.find]
where = ["src"]
include = ["flow_cad*"]
